--- a/Project4_20216934.vcxproj
+++ b/Project4_20216934.vcxproj
@@ -133,6 +133,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="member.h" />
+    <ClInclude Include="trainer.h" />
+    <ClInclude Include="trainer_manager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
