--- a/Project4_20216934.vcxproj.filters
+++ b/Project4_20216934.vcxproj.filters
@@ -29,5 +29,11 @@
     <ClInclude Include="member.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="trainer_manager.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="trainer.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
