--- a/Project4_20216934.vcxproj.filters
+++ b/Project4_20216934.vcxproj.filters
@@ -35,5 +35,14 @@
     <ClInclude Include="trainer.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="reserve_manager.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="reserve.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="visitor_manager.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
